syntax = "proto3";



option java_multiple_files = true;

option java_package = "EventManager_GRPC";

option java_outer_classname = "SmartServiceImpl";



package extra_smart;

service EventManager {

rpc AddEvent (Event) returns (EventResponse) {}

rpc ModifyEvent (stream EventModificationRequest) returns (EventResponse) {}

rpc ListEvents (DateRange) returns (stream Event) {}

}

message Event {

string id = 1;

string name = 2;

string description = 3;

int32 reminder = 4;

int64 date = 5;

}



message EventResponse {

bool success = 1;

string message = 2;

}



message EventModificationRequest {

string id = 1;

oneof action {

string name = 2;

string description = 3;

int32 reminder = 5;

int64 date = 6;

}

}



message DateRange {

int64 start_date = 1;

int64 end_date = 2;

}